# bx

./: .beans.yml  .editorconfig  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bonnie.toml  spec.md
.beans/: bx-2ocd--update-bonnie-branding-to-bx-throughout-codebase.md  bx-3tpt--migrate-argument-parsing-to-clap.md  bx-4dgd--create-auto-update-logic-for-config-files-with-bre.md  bx-4nsy--clean-up-changelogmd-duplicate-entries.md  bx-6hym--improve-test-isolation-to-prevent-race-conditions.md  bx-7844--fix-clippy-unnecessary-unwrap-after-is-some-check.md  bx-a35a--search-for-cleanup-opportunities.md  bx-aorw--fix-clippy-warnings-in-tests.md  bx-bmqu--remove-bonnie-cli-keep-only-bx-binary.md  bx-bqd6--upgrade-rust-edition-from-2018-to-2021.md  bx-czdp--remove-or-update-stale-files.md  bx-fktp--migrate-error-handling-to-anyhow.md  bx-gmd5--fix-clippy-redundant-pattern-matching-with-matches.md  bx-hinh--fix-clippy-option-idioms-unwrap-or-default-and-the.md  bx-itqk--modernize-testing-with-assert-cmd.md  bx-iys8--fix-clippy-use-first-instead-of-get0.md  bx-jv26--reorganize-code-into-hierarchical-modules.md  bx-k9yc--clap-cli-flag-compatibility-broken-by-dash-prefixe.md  bx-lgee--address-todofixme-comments.md  bx-mv7s--allow-config-file-to-be-called-bxtoml-in-parallel.md  bx-outy--create-agents-guidance.md  bx-tbh6--fix-clippy-use-is-empty-instead-of-firstis-some.md  bx-tyjv--improve-error-handling-reduce-unwrappanic-usage.md  bx-ucli--macos-arm64-build-für-bx-in-github-releases.md  bx-vomo--fix-clippy-needless-late-initialization.md  bx-xdgh--update-editorconfig-to-use-tabs-and-reformat-codeb.md  bx-xz7w--fix-clippy-needless-borrows-for-generic-args.md  bx-yxdl--fix-version-inconsistencies-across-codebase.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-dev.yml  cd.yml  ci.yml
agents/: BEST_PRACTICES_SUMMARY.md  IMPLEMENTATION_EXAMPLES.md  MODERNIZATION_GUIDE.md  RUST_CLI_BEST_PRACTICES_2024-2025.md
install_scripts/: musl.sh
src/: bones.rs  cache.rs  default_shells.rs  get_cfg.rs  help.rs  init.rs  lib.rs  raw_schema.rs  schema.rs  template.rs  version.rs
src/cli/: args.rs  mod.rs
tests/: caching.rs  cli.rs  known_cases.rs
