[package]
    name = "codemonument_bx"
    version = "0.3.4"
    authors = [
        "arctic_hen7 <arctic_hen7@pm.me>",
        "bjesuiter <bjesuiter@gmail.com>",
    ]
    edition = "2018"
    description = "Simple, cross-platform, and fast command aliases with superpowers."
    license = "MIT"
    repository = "https://github.com/codemonument/bx"
    keywords = ["cli", "automation"]
    categories = ["command-line-utilities"]

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    toml       = "0.5"
    serde      = { version = "1", features = ["derive"] }
    serde_json = "1"
    dotenv     = "0.15"
    regex      = "1.5"
    home       = "0.5"

[dev-dependencies]
    tempfile   = "3"

[lib]
    name = "lib"

[[bin]]
    name = "bx"
    path = "src/bin/main.rs"
