[package]
    name = "bx-cli"
    version = "0.4.1"
    description = "Simple, cross-platform, and fast command aliases with superpowers."
    authors = [
        "arctic_hen7 <arctic_hen7@pm.me>",
        "bjesuiter <bjesuiter@gmail.com>",
    ]
    edition = "2021"
    license = "MIT"
    readme = "README.md"
    repository = "https://github.com/codemonument/bx"
    keywords = ["cli", "automation"]
    categories = ["command-line-utilities"]

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    anyhow     = "1.0"
    clap       = { version = "4", features = ["derive"] }
    toml       = "0.5"
    serde      = { version = "1", features = ["derive"] }
    serde_json = "1"
    dotenv     = "0.15"
    regex      = "1.5"
    home       = "0.5"

[dev-dependencies]
    tempfile   = "3"
    assert_cmd = "2.0"
    predicates = "3.1"
    assert_fs  = "1.1"

[lib]
    name = "lib"

[[bin]]
    name = "bx"
    path = "src/bin/main.rs"
